classDiagram
    direction TB

    %% ==================== CORE ENTITIES ====================
    
    class Board {
        +String id
        +String name
        +String userId
        +String backgroundUrl
        +String backgroundPublicId
        +String backgroundColor
        --
        +getLists() List[]
        +getMembers() BoardMember[]
    }

    class List {
        +String id
        +String name
        +Integer order
        +String boardId
        --
        +getBoard() Board
        +getCards() Card[]
    }

    class Card {
        +String id
        +String name
        +String description
        +Integer order
        +String coverUrl
        +String coverPublicId
        +String coverColor
        +String coverMode
        +String listId
        +Timestamp startDate
        +Timestamp deadline
        +Timestamp dueAt
        +Boolean dueComplete
        +Integer reminderMinutes
        +String recurrence
        +Integer recurrenceDay
        +Integer recurrenceWeekday
        +String repeatFrequency
        +Integer repeatInterval
        +Integer latitude
        +Integer longitude
        +Boolean completed
        +Boolean isTemplate
        +Timestamp createdAt
        +Timestamp updatedAt
        --
        +getList() List
        +getChecklistItems() ChecklistItem[]
        +getAttachments() Attachment[]
        +getLabels() Label[]
        +getMembers() BoardMember[]
        +getComments() Comment[]
        +getActivities() Activity[]
    }

    class ChecklistItem {
        +String id
        +String name
        +Boolean completed
        +Integer order
        +String cardId
        --
        +getCard() Card
    }

    class Attachment {
        +String id
        +String name
        +String url
        +String publicId
        +String type
        +Integer size
        +Timestamp uploadedAt
        +String uploadedBy
        +String cardId
        --
        +getCard() Card
    }

    class Label {
        +String id
        +String name
        +String color
        +String userId
        --
        +getCards() Card[]
    }

    class BoardMember {
        +String id
        +String boardId
        +String userId
        +String name
        +String email
        +String avatar
        +String role
        +Timestamp addedAt
        --
        +getBoard() Board
        +getAssignedCards() Card[]
    }

    class Comment {
        +String id
        +String cardId
        +String userId
        +String content
        +Timestamp createdAt
        --
        +getCard() Card
    }

    class Activity {
        +String id
        +String cardId
        +String userId
        +String actionType
        +String description
        +String metadata
        +Timestamp createdAt
        --
        +getCard() Card
    }

    class DueReminderLog {
        +String id
        +String cardId
        +String userId
        +Timestamp dueAtSnapshot
        +Integer reminderMinutes
        +Timestamp sentAt
        --
        +getCard() Card
    }

    %% ==================== JUNCTION TABLES ====================
    
    class CardLabel {
        +String id
        +String cardId
        +String labelId
    }

    class CardMember {
        +String id
        +String cardId
        +String memberId
    }

    %% ==================== TEMPLATE SYSTEM ====================
    
    class BoardTemplate {
        +String id
        +String name
        +String description
        +String category
        +String userId
        +Boolean isPublic
        +String backgroundUrl
        +String backgroundColor
        +Timestamp createdAt
        +Timestamp updatedAt
        --
        +getLists() TemplateList[]
        +getLabels() TemplateLabel[]
    }

    class TemplateList {
        +String id
        +String name
        +Integer order
        +String templateId
        --
        +getTemplate() BoardTemplate
        +getCards() TemplateCard[]
    }

    class TemplateCard {
        +String id
        +String name
        +String description
        +Integer order
        +String templateListId
        --
        +getTemplateList() TemplateList
    }

    class TemplateLabel {
        +String id
        +String name
        +String color
        +String templateId
        --
        +getTemplate() BoardTemplate
    }

    %% ==================== RELATIONSHIPS ====================
    
    %% Core Entity Relationships
    Board "1" --> "*" List : contains
    Board "1" --> "*" BoardMember : has members
    
    List "1" --> "*" Card : contains
    List "*" --> "1" Board : belongs to
    
    Card "*" --> "1" List : belongs to
    Card "1" --> "*" ChecklistItem : has
    Card "1" --> "*" Attachment : has
    Card "1" --> "*" Comment : has
    Card "1" --> "*" Activity : has
    Card "1" --> "*" DueReminderLog : has reminders
    
    %% Many-to-Many Relationships
    Card "*" --> "*" Label : has labels
    Card "*" --> "*" BoardMember : assigned to
    
    %% Junction Table Relationships
    CardLabel --> Card : references
    CardLabel --> Label : references
    CardMember --> Card : references
    CardMember --> BoardMember : references
    
    %% Template Relationships
    BoardTemplate "1" --> "*" TemplateList : contains
    BoardTemplate "1" --> "*" TemplateLabel : has
    TemplateList "1" --> "*" TemplateCard : contains
    TemplateList "*" --> "1" BoardTemplate : belongs to
    TemplateCard "*" --> "1" TemplateList : belongs to
    TemplateLabel "*" --> "1" BoardTemplate : belongs to
